--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ tools
 _xmsgs
 *.log
 *.cmd
+modelsim.ini
+*.fdo
+*.udo
 
 # https://github.com/github/gitignore/blob/master/Global/XilinxISE.gitignore
 # intermediate build files
@@ -60,3 +63,28 @@ iseconfig/
 xlnx_auto_0_xdb/
 xst/
 _ngo/
+
+# https://github.com/github/gitignore/blob/master/Global/ModelSim.gitignore
+# ignore ModelSim generated files and directories (temp files and so on)
+[_@]*
+
+# ignore compilation output of ModelSim
+*.mti
+*.dat
+*.dbs
+*.psm
+*.bak
+*.cmp
+*.jpg
+*.html
+*.bsf
+
+# ignore simulation output of ModelSim
+wlf*
+*.wlf
+*.vstf
+*.ucdb
+cov*/
+transcript*
+sc_dpiheader.h
+vsim.dbg
