--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ _xmsgs
 modelsim.ini
 *.fdo
 *.udo
+out.txt
 
 # https://github.com/github/gitignore/blob/master/Global/XilinxISE.gitignore
 # intermediate build files
